JavaFX zahlen raten

--- a/_02_hellofx/src/main/resources/com/example/hellofx/hello-view.fxml
+++ b/_02_hellofx/src/main/resources/com/example/hellofx/hello-view.fxml
@@ -5,11 +5,10 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hellofx.HelloController">
-   <children>
-      <Button layoutX="323.0" layoutY="54.0" mnemonicParsing="false" onAction="#onClick" text="Button" />
-      <TextField fx:id="textfield" layoutX="77.0" layoutY="54.0" />
-      <Label fx:id="label" layoutX="77.0" layoutY="111.0" prefHeight="37.0" prefWidth="169.0" />
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="319.0" prefWidth="503.0" style="-fx-background-color: #254648;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hellofx.controller.HelloController">
+    <children>
+        <TextField fx:id="textfield" layoutX="97.0" layoutY="67.0" />
+        <Label fx:id="label" layoutX="77.0" layoutY="111.0" prefHeight="37.0" prefWidth="169.0" />
+        <Button layoutX="356.0" layoutY="67.0" mnemonicParsing="false" onAction="#onClick" text="Button" />
+    </children>
 </AnchorPane>
