--- a/_a02_zahlenraten/src/main/resources/com/example/zahlenraten/hello-view.fxml
+++ b/_a02_zahlenraten/src/main/resources/com/example/zahlenraten/hello-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zahlenraten.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zahlenraten.controller.HelloController">
    <children>
       <TextField fx:id="callNumberField" layoutX="199.0" layoutY="173.0" />
       <Button layoutX="197.0" layoutY="124.0" mnemonicParsing="false" onAction="#onCreate" prefHeight="27.0" prefWidth="270.0" text="Erzeuge Liste und Zufallszahl" />
